[gd_scene load_steps=31 format=3 uid="uid://ccxvlbc2ev4sg"]

[ext_resource type="Script" path="res://scripts/character_selector.gd" id="1_4jhyb"]
[ext_resource type="Script" uid="uid://clfrob1cnoli1" path="res://scripts/playable_character_1.gd" id="2_pfea8"]
[ext_resource type="Texture2D" uid="uid://jgkp0lqi56w" path="res://assets/characters/characters/Characters(100x100)/Soldier/Soldier/Soldier-Attack01.png" id="3_pfea8"]
[ext_resource type="Texture2D" uid="uid://ckkf06tvhdv4o" path="res://assets/characters/characters/Characters(100x100)/Soldier/Soldier/Soldier-Idle.png" id="3_uf15r"]
[ext_resource type="Texture2D" uid="uid://vrfescgeoyxb" path="res://assets/characters/characters/Characters(100x100)/Soldier/Soldier/Soldier-Walk.png" id="4_ltyrd"]
[ext_resource type="Script" uid="uid://cqd0ptlmfjy2j" path="res://scripts/playable_character_2.gd" id="5_px3lb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uf15r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ksgxw"]
atlas = ExtResource("3_pfea8")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf0no"]
atlas = ExtResource("3_pfea8")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1hra"]
atlas = ExtResource("3_pfea8")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qydiu"]
atlas = ExtResource("3_pfea8")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xif5e"]
atlas = ExtResource("3_pfea8")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_44mqb"]
atlas = ExtResource("3_pfea8")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hah1"]
atlas = ExtResource("3_uf15r")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_adr3h"]
atlas = ExtResource("3_uf15r")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8i6"]
atlas = ExtResource("3_uf15r")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nreci"]
atlas = ExtResource("3_uf15r")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc5ec"]
atlas = ExtResource("3_uf15r")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1amp"]
atlas = ExtResource("3_uf15r")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_35y5p"]
atlas = ExtResource("4_ltyrd")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnqxq"]
atlas = ExtResource("4_ltyrd")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eway6"]
atlas = ExtResource("4_ltyrd")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnogr"]
atlas = ExtResource("4_ltyrd")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq1of"]
atlas = ExtResource("4_ltyrd")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_emyj1"]
atlas = ExtResource("4_ltyrd")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4a0e"]
atlas = ExtResource("4_ltyrd")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwm2k"]
atlas = ExtResource("4_ltyrd")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_ltyrd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksgxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf0no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1hra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qydiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xif5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44mqb")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hah1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adr3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nreci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc5ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1amp")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35y5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnqxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eway6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnogr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq1of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emyj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4a0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwm2k")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_px3lb"]
radius = 39.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7reo"]

[node name="character_logic" type="Node2D"]

[node name="character_selector" type="Node2D" parent="."]
script = ExtResource("1_4jhyb")

[node name="playable_character_1" type="CharacterBody2D" parent="character_selector" groups=["Players"]]
position = Vector2(214, 318)
scale = Vector2(5, 5)
collision_mask = 7
script = ExtResource("2_pfea8")

[node name="unit_collision" type="CollisionShape2D" parent="character_selector/playable_character_1"]
shape = SubResource("CircleShape2D_uf15r")

[node name="unit_sprite" type="AnimatedSprite2D" parent="character_selector/playable_character_1"]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_ltyrd")
animation = &"attack"

[node name="attack_range" type="Area2D" parent="character_selector/playable_character_1"]
collision_layer = 0
collision_mask = 4

[node name="attack_range_shape" type="CollisionShape2D" parent="character_selector/playable_character_1/attack_range"]
shape = SubResource("CircleShape2D_px3lb")

[node name="playable_character_2" type="CharacterBody2D" parent="character_selector" groups=["Players"]]
position = Vector2(-191, -30)
scale = Vector2(5, 5)
collision_layer = 3
script = ExtResource("5_px3lb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="character_selector/playable_character_2"]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_ltyrd")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="character_selector/playable_character_2"]
shape = SubResource("RectangleShape2D_r7reo")

[node name="Area2D" type="Area2D" parent="character_selector/playable_character_2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="character_selector/playable_character_2/Area2D"]
shape = SubResource("RectangleShape2D_r7reo")

[connection signal="input_event" from="character_selector/playable_character_2/Area2D" to="character_selector/playable_character_2" method="_on_area_2d_input_event"]
